# django_tsubo

./: .gitignore  pyproject.toml
blogproject/blogpost/: admin.py  models.py  urls.py  views.py
blogproject/blogpost/migrations/: 0001_initial.py  0002_blogmodel.py
blogproject/blogproject/: settings.py  urls.py
blogproject/templates/: create.html  delete.html  detail.html  list.html  update.html
helloworldproject/helloworldapp/: urls.py
helloworldproject/helloworldproject/: settings.py  urls.py  views.py
passwordproject/passwordproject/: settings.py  urls.py  views.py
passwordproject/templates/: change-password.html
passwordproject/templates/registration/: login.html
reviewproject/reviewpost/: models.py  urls.py  views.py
reviewproject/reviewpost/migrations/: 0001_initial.py
reviewproject/reviewproject/: settings.py  urls.py
reviewproject/templates/: base.html  create.html  detail.html  list.html  login.html  signup.html
